[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/damaged-deck.png" type="Texture" id=1]
[ext_resource path="res://src/builder/ui/ProgressBuilder.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/builder/DamagedDeck.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/deck-crack.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 8.0

[node name="DamagedDeck" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -13, -5, -13, 8, -12, 13, -7, 14, -3, 10, 11, 11, 16, 7, 16, 0, 9, -8, 2, -10, -3, -12, -8, -7, -11, -9 )

[node name="RepairingArea" type="Area2D" parent="."]
position = Vector2( 1, 2 )
collision_layer = 1024
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RepairingArea"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="ProgressBuilder" parent="." instance=ExtResource( 2 )]
position = Vector2( -23, -23 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CrackSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
